feat: Update OpenAPI spec to include GET post
