# api/src/epa_api/models/post.py
@@ -1,0 +1,101 @@
+# coding: utf-8
+
+"""
+    EPA (Event Posting App) API
+
+    API for a mobile safety application that allows users to post and subscribe to local safety concerns. 
+
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+
+
+
+from datetime import datetime
+from pydantic import BaseModel, ConfigDict, Field, StrictStr
+from typing import Any, ClassVar, Dict, List, Optional
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+class Post(BaseModel):
+    """
+    Post
+    """ # noqa: E501
+    post_id: StrictStr
+    created_by: StrictStr = Field(description="The user ID of the author.")
+    title: StrictStr
+    content: StrictStr
+    category_slug: StrictStr = Field(description="URL-friendly identifier for the category.")
+    created_at: Optional[datetime] = None
+    __properties: ClassVar[List[str]] = ["post_id", "created_by", "title", "content", "category_slug", "created_at"]
+
+    model_config = {
+        "populate_by_name": True,
+        "validate_assignment": True,
+        "protected_namespaces": (),
+    }
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of Post from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude={
+            },
+            exclude_none=True,
+        )
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Dict) -> Self:
+        """Create an instance of Post from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "post_id": obj.get("post_id"),
+            "created_by": obj.get("created_by"),
+            "title": obj.get("title"),
+            "content": obj.get("content"),
+            "category_slug": obj.get("category_slug"),
+            "created_at": obj.get("created_at")
+        })
+        return _obj
+
+
